@@ -142,12 +142,13 @@ LT.Lang.Buff.Wisdom = KBM.Language:Add("Stoneseers Wisdom")
 LT.Lang.Buff.Wisdom:SetGerman("Weisheit des Steindeuters")
 LT.Lang.Buff.Wisdom:SetFrench("Sagesse de l'oracle de pierre")
 LT.Lang.Buff.Wisdom:SetRussian("Мудрость прорицателя")
+
 -- Notify Dictionary
 LT.Lang.Notify = {}
-LT.Lang.Notify.PhaseTwoTrans = KBM.Language:Add('Laethys roars, "How dare you scuff my beautiful form?! You will pay for this..."')
+LT.Lang.Notify.PhaseTwoTrans = KBM.Language:Add("Laethys roars, \"How dare you scuff my beautiful form%?! You will pay for this...\"")
 LT.Lang.Notify.PhaseTwoTrans:SetFrench('Laethys rugit : "Comment osez-vous vous en prendre à tant de beauté ? Vous me le paierez..."')
 LT.Lang.Notify.PhaseTwoTrans:SetGerman('Laethys brüllt: "Wie könnt Ihr es wagen, meiner wunderschönen Gestalt zu schaden. Dafür werdet Ihr büßen ..."')
-LT.Lang.Notify.PhaseTwoStart = KBM.Language:Add('Laethys says, "Behold your doom! Put down your weapons and I shall grant you a swift demise!"')
+LT.Lang.Notify.PhaseTwoStart = KBM.Language:Add("Laethys says, \"Behold your doom! Put down your weapons and perhaps I shall grant you a swift demise!\"")
 LT.Lang.Notify.PhaseTwoStart:SetFrench('Laethys dit : "Nul ne peut échapper à son destin ! Rendez les armes et je vous accorderai un léger sursis."')
 LT.Lang.Notify.PhaseTwoStart:SetGerman('Laethys sagt: "Seht Eurem Untergang entgegen! Legt Eure Waffen nieder und ich gewähre Euch ein schnelles Ende ... vielleicht!"')
 LT.Lang.Notify.LiqGold = KBM.Language:Add("Laethys unleashes a wave of liquid gold.")
@@ -305,7 +306,7 @@ function LT:UnitHPCheck(uDetails, unitID)
 					self.Laethys.CastBar:Create(unitID)
 					self.PhaseObj:Start(self.StartTime)
 					self.PhaseObj:SetPhase("1")
-					self.PhaseObj.Objectives:AddPercent(self.Laethys.Name, 50, 100)
+					self.PhaseObj.Objectives:AddPercent(self.Laethys.Name, 51, 100)
 					self.Phase = 1
 					KBM.MechTimer:AddStart(self.Laethys.TimersRef.StormFirst)
 					KBM.MechTimer:AddStart(self.Laethys.TimersRef.OrbFirst)
